# bmi

./: LICENSE  bmi.cabal  stack.yaml
app/: Main.hs
