name:                bmi
version:             1.0.0.0
synopsis:            Calculates BMI
description:         Calculates a person's body-mass index
homepage:            https://github.com/githubuser/bmi
license:             MIT
license-file:        LICENSE
author:              Michael Dippery
maintainer:          michael@monkey-robot.com
copyright:           2016 Michael Dippery
category:            Utilities
build-type:          Simple
cabal-version:       >=1.10

executable bmi
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base,
    split

source-repository head
  type:     git
  location: https://github.com/mdippery/bmi
